--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@ permalink: /
                 </div>
                 <div class="col-lg-5 text-center">
                     <div class="wow fadeIn" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
-                        <img src="../assets/images/templates/agency/item-1.png" alt="" class="img-fluid w-75">
+                        <img src="#" alt="" class="img-fluid w-75">
                     </div>
                 </div>
             </div>
