--- a/main.html
+++ b/main.html
@@ -4,21 +4,27 @@ layout: home
 permalink: /
 ---
 <section class="bg-info" id="start">
-    
+
     <div class="mb-5">
         <div class="container text-white">
             <div class="row justify-content-between">
                 <div class="col-md-4">
-                    <div class="wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                    <div class="wow fadeInUp" data-wow-delay=".2s"
+                        style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                         <h2 class="h1" style="color: black !important;"><strong>हमारा परिचय </strong></h2>
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                        <p class="lead">    हिन्दू क्रांति सेना का गठन श्री पृथ्वी सिंह लीलकी ने अन्य हिन्दू राष्ट्रवादी साथियों के साथ मिलकर किया |हिन्दू क्रांति सेना भारतीय संविधान में पूर्ण आस्था रखते हुए गौ-रक्षा व हिन्दू हितों की रक्षा के लिए प्रयत्नरत हैं
-                            हिन्दू क्रांति सेना एक गैर राजनैतिक सामाजिक संगठन है जो जातिवाद व जाति आधारित आरक्षण के खिलाफ है व सामाजिक समरसता के लिए 36 कोमौ को साथ लेकर चलता है |संगठन समय-समय पर धार्मिक व सामाजिक आयोजन करवाता रहता है व गरीब व असहाय लोगों की सेवा के लिए सदैव तत्पर रहता है |
-                            संगठन द्वारा अपने उद्देश्यों की पूर्ती हेतु राष्ट्रीय, प्रदेश, जिला, तहसील व ग्राम स्तर पर ईकाईयों का गठन किया गया है |
-                        
+                    <div class="wow fadeInUp" data-wow-delay=".4s"
+                        style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                        <p class="lead"> हिन्दू क्रांति सेना का गठन श्री पृथ्वी सिंह लीलकी ने अन्य हिन्दू राष्ट्रवादी
+                            साथियों के साथ मिलकर किया |हिन्दू क्रांति सेना भारतीय संविधान में पूर्ण आस्था रखते हुए
+                            गौ-रक्षा व हिन्दू हितों की रक्षा के लिए प्रयत्नरत हैं
+                            हिन्दू क्रांति सेना एक गैर राजनैतिक सामाजिक संगठन है जो जातिवाद व जाति आधारित आरक्षण के
+                            खिलाफ है व सामाजिक समरसता के लिए 36 कोमौ को साथ लेकर चलता है |संगठन समय-समय पर धार्मिक व
+                            सामाजिक आयोजन करवाता रहता है व गरीब व असहाय लोगों की सेवा के लिए सदैव तत्पर रहता है |
+                            संगठन द्वारा अपने उद्देश्यों की पूर्ती हेतु राष्ट्रीय, प्रदेश, जिला, तहसील व ग्राम स्तर पर
+                            ईकाईयों का गठन किया गया है |
                         </p>
                     </div>
                 </div>
@@ -30,14 +36,19 @@ permalink: /
         <div class="p-5 bg-white br-sm">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
-                    <div class="wow fadeInUp" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                    <div class="wow fadeInUp" data-wow-delay=".1s"
+                        style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                         <h2 style="color: white  !important;">हिंदू क्रांति सेना के सदस्य बनें</h2>
-                        <p style="color: white !important;">हिंदू क्रांति सेना के सदस्यता प्राप्त करने  के लिए दिए गए लिंक खोलें और वहां  दिया हुआ फार्म भर कर भेजें एवं आवस्यक दस्तावेज सलंग्न करें । विराट हिन्दू राष्ट्र के निर्माण में भागीदार बनें ।</p>
-                            <a href="https://forms.gle/eVshWZJ265PYHe5t8""><button type="submit" style="background-color: orange;" class="btn btn-info mb-2 ml-2">सदस्य बनें</button></a>
+                        <p style="color: white !important;">हिंदू क्रांति सेना के सदस्यता प्राप्त करने के लिए दिए गए
+                            लिंक खोलें और वहां दिया हुआ फार्म भर कर भेजें एवं आवस्यक दस्तावेज सलंग्न करें । विराट हिन्दू
+                            राष्ट्र के निर्माण में भागीदार बनें ।</p>
+                        <a href="https://forms.gle/eVshWZJ265PYHe5t8""><button type=" submit"
+                            style="background-color: orange;" class="btn btn-info mb-2 ml-2">सदस्य बनें</button></a>
                     </div>
                 </div>
                 <div class="col-lg-5 text-center">
-                    <div class="wow fadeIn" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
+                    <div class="wow fadeIn" data-wow-delay=".4s"
+                        style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
                         <img src="#" alt="" class="img-fluid w-75">
                     </div>
                 </div>
